Support fiscal year reports spread over multiple calendar years

BUG: 414675
FIXED-IN: 5.1.2

(cherry picked from commit 28c202f0f328f8f132791789b671f9adebda6c1d)